Prohibit and replace collections with unstable iteration order.