@@ -41,6 +41,7 @@ import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -59,7 +60,6 @@ import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import jdk.vm.ci.meta.JavaKind;
 import org.graalvm.collections.EconomicMap;
 import org.graalvm.collections.EconomicMapWrap;
 import org.graalvm.collections.Equivalence;
@@ -72,6 +72,7 @@ import jdk.graal.compiler.core.common.util.FrequencyEncoder;
 import jdk.graal.compiler.debug.GraalError;
 import jdk.graal.compiler.replacements.SnippetTemplate;
 import jdk.internal.misc.Unsafe;
+import jdk.vm.ci.meta.JavaKind;
 
 /**
  * Support for deep copying an object across processes by {@linkplain #encode encoding} it to bytes
@@ -97,11 +98,11 @@ public class ObjectCopier {
         protected Builtin(Class<?> clazz, Class<?>... concreteClasses) {
             this.clazz = clazz;
             if (Modifier.isAbstract(clazz.getModifiers())) {
-                this.concreteClasses = Set.of(concreteClasses);
+                this.concreteClasses = CollectionsUtil.setOf(concreteClasses);
             } else {
-                ArrayList<Class<?>> l = new ArrayList<>(List.of(concreteClasses));
+                Set<Class<?>> l = new EconomicHashSet<>(Arrays.asList(concreteClasses));
                 l.add(clazz);
-                this.concreteClasses = Set.copyOf(l);
+                this.concreteClasses = Collections.unmodifiableSet(l);
             }
         }
 
@@ -285,11 +286,11 @@ public class ObjectCopier {
 
         HashMapBuiltin() {
             super(HashMap.class, IdentityHashMap.class, LinkedHashMap.class, SnippetTemplate.LRUCache.class);
-            factories = Map.of(
-                            HashMap.class, HashMap::new,
-                            IdentityHashMap.class, IdentityHashMap::new,
-                            LinkedHashMap.class, LinkedHashMap::new,
-                            SnippetTemplate.LRUCache.class, SnippetTemplate.LRUCache::new);
+            factories = new EconomicHashMap<>();
+            factories.put(HashMap.class, HashMap::new);
+            factories.put(IdentityHashMap.class, IdentityHashMap::new);
+            factories.put(LinkedHashMap.class, LinkedHashMap::new);
+            factories.put(SnippetTemplate.LRUCache.class, SnippetTemplate.LRUCache::new);
         }
 
         @Override
@@ -440,8 +441,8 @@ public class ObjectCopier {
 
     private static final Comparator<Class<?>> CLASS_COMPARATOR = Comparator.comparing(Class::getName);
     final Map<Class<?>, ClassInfo> classInfos = new TreeMap<>(CLASS_COMPARATOR);
-    final Map<Class<?>, Builtin> builtinClasses = new HashMap<>();
-    final Set<Class<?>> notBuiltins = new HashSet<>();
+    final Map<Class<?>, Builtin> builtinClasses = new LinkedHashMap<>();
+    final Set<Class<?>> notBuiltins = new EconomicHashSet<>();
 
     protected final void addBuiltin(Builtin builtin) {
         addBuiltin(builtin, builtin.clazz);
@@ -497,7 +498,7 @@ public class ObjectCopier {
 
     public static class Decoder extends ObjectCopier {
 
-        private final Map<Integer, Object> idToObject = new HashMap<>();
+        private final Map<Integer, Object> idToObject = new EconomicHashMap<>();
         private final ClassLoader loader;
 
         public Decoder(ClassLoader loader) {
@@ -758,7 +759,7 @@ public class ObjectCopier {
         }
 
         public static Map<Object, Field> gatherExternalValues(List<Field> externalValueFields) {
-            Map<Object, Field> result = new IdentityHashMap<>();
+            Map<Object, Field> result = EconomicHashMap.newIdentityMap();
             for (Field f : externalValueFields) {
                 addExternalValue(result, f);
             }
